rewrite of post with complete examples and use cases